<resources>
    <string name="app_name">Prosper Dictionary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Prosper Dictionary</string>
    <string name="nav_header_subtitle">… Enjoy the Simple Experience</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="joy">Internet Required</string>
    <string name="send">Favourite Successfully added</string>

    <string name="dictionary">Dictionary</string>
    <string name="create_your_dictionary">Create Your Dictionary</string>
    <string name="favourite">Favorite</string>

    <string name="get_in_touch">Get in touch</string>
    <string name="rate">Rate app</string>
    <string name="dark">Dark Theme</string>
    <string name="feedback">Contact Us</string>
    <string name="share">Share</string>
    <string name="this_is_feedback_fragment">This is feedback fragment</string>
    <string name="search">search</string>
    <string name="create_your_own_dictionary">CREATE YOUR OWN DICTIONARY</string>
    <string name="view_your_favourite_words">VIEW YOUR FAVOURITE WORDS</string>
    <string name="prosper_dictionary">Prosper Dictionary</string>
    <string name="get_started">Get Started</string>
    <string name="thanks_so_much_for_checking_out_our_app_we_are_committed_to_the_absolute_best_simplified_dictionary_experience_around_and_we_hope_you_are_too">Thanks so much for checking out our app! we are committed to the absolute best simplified dictionary experience around, and we hope you are too.</string>
    <string name="ld">lD</string>
    <string name="eye_care">Eye care</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="prosper">prosper</string>
    <string name="english">English</string>
    <string name="about">About</string>
    <string name="developed_by_papilo_collanso">Developed by papilo collanso</string>
    <string name="copyright_2020">Copyright 2020</string>
    <string name="title_activity_meaning">MainActivity</string>
    <string name="title_home">Home</string>

    <string name="voice">Voice</string>
    <string name="wiki">Wiki</string>
    <string name="love">Love</string>
    <string name="name">Name</string>
    <string name="explain">Explain</string>
    <string name="ball">Favourite</string>
    <string name="are_you_sure_you_want_to_delete_this_word">Are you sure, you want to delete this word ?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="add_word_and_meaning">Add Word and Meaning</string>
    <string name="meaning">Meaning</string>
    <string name="word">Word</string>
    <string name="submit">Submit</string>
</resources>