<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.prosperdictionary.ui.dickwiki.DictionaryFragment"
        android:label="@string/dictionary"
        tools:layout="@layout/fragment_dictionary" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.prosperdictionary.ui.create.CreateYourDictionaryFragment"
        android:label="@string/create_your_dictionary"
        tools:layout="@layout/fragment_create_your_dictionary" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.prosperdictionary.ui.favourite.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite" >

        <argument
            android:name="title"
            app:argType="string"
            android:defaultValue="default"/>

    </fragment>
    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.example.prosperdictionary.Feedback"
        android:label="@string/feedback"
        tools:layout="@layout/fragment_feedback"/>
    <fragment
        android:id="@+id/nav_share"

        android:name="com.example.prosperdictionary.Share"
        android:label="@string/share"
        tools:layout="@layout/fragment_share" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.prosperdictionary.About"
        android:label="About"
        tools:layout="@layout/about" />

</navigation>